--- a/JobPortal.Api/JobPortal.Api.csproj
+++ b/JobPortal.Api/JobPortal.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
@@ -18,11 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JobPortal\JobPortal.csproj" />
+    <Folder Include="Persistence\Data\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Persistence\Data\" />
+    <ProjectReference Include="..\JobPortal.Shares\JobPortal.Shared.csproj" />
   </ItemGroup>
 
 </Project>
