--- a/JobPortal.Api/JobPortal.Api.csproj
+++ b/JobPortal.Api/JobPortal.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.ApiEndpoints" Version="3.1.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.5" />
@@ -19,11 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Persistence\Data\" />
+    <Folder Include="Persistence\Data\Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JobPortal.Shares\JobPortal.Shared.csproj" />
+    <ProjectReference Include="..\JobPortal\JobPortal.csproj" />
   </ItemGroup>
 
 </Project>
