--- a/JobPortal.Api/JobPortal.Api.csproj
+++ b/JobPortal.Api/JobPortal.Api.csproj
@@ -17,9 +17,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Images\" />
     <Folder Include="Persistence\Data\Migrations\" />
   </ItemGroup>
 
