--- a/JobPortal.Api/JobPortal.Api.csproj
+++ b/JobPortal.Api/JobPortal.Api.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Images\" />
-    <Folder Include="Persistence\Data\Migrations\" />
+    <Folder Include="Persistence\Data\" />
   </ItemGroup>
 
   <ItemGroup>
