--- a/JobPortal.Api/appsettings.json
+++ b/JobPortal.Api/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "JobPortalContext": "DataSource=Persistence/Data/jobportal.db"
   },
+  "Auth0": {
+    "Authority": "https://dev-ovmvgt2azc0zt7vu.us.auth0.com",
+    "ApiIdentifier": "https://jobportalapi.com"
+  },
   "AllowedHosts": "*"
 }
