--- a/JobPortal/JobPortal.csproj
+++ b/JobPortal/JobPortal.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Features\Home\Claimsdata.razor" />
     <Content Remove="Features\Home\JobDetails.razor" />
   </ItemGroup>
 
